--- a/320.Rmd
+++ b/320.Rmd
@@ -59,88 +59,66 @@ attacksPerYear
   
   
 3. One country more than another?
+  We first question this increase by asking, is there one country that is increasing faster/more than any of the other countries? We notice below that these are the top 6 countries that have impacted the total number of shark attacks throughout the years. We see this graph by first grouping our data and counting the number of rows that a certain country has. This determines the total number of attacks that a country has. 
+
 ```{r}
-attac <- shark_data %>%
+countryTotals <- shark_data %>%
   group_by(Country) %>%
-  summarize(attacks = n()) %>%
-  arrange(desc(attacks))%>%
+  summarize(attacksForCountries = n()) %>%
+  arrange(desc(attacksForCountries))%>%
   head() %>%
-  ggplot(aes(x=Country, y=attacks)) + geom_bar(stat = "identity", color = "black", fill = "navyblue")
+  ggplot(aes(x=Country, y=attacksForCountries)) + geom_bar(stat = "identity", color = "black", fill = "navyblue") + labs(title = "Top 6 Countries with the most number of attacks", x = "Country", y = "Number of Attacks") + geom_text(aes(label=attacksForCountries), position=position_dodge(width=0.9), vjust=-0.25)
 
 
-attac
+countryTotals
 ```
   
+  Looking at this graph we can tell that the USA has the largest number of attacks compared to Australia and South Africa. But this huge difference could purely be based on the population differences between the 6 countries. So to combat this, we can look at the different graphs individually as they progress through time. In the graph below we can see the different graphs as time progresses. We notice with the first graph that is generally difficult to compare the 6 countries. To fix this, how about we change the scaling for each of the different countries. Changing this scaling helps us see the the actualy increase and change throughout time. We notice that with each country there is a positive correlation between time and the number of attacks. What could be causing this issue? It looks as though the USA has the strongest correlation, with the steepest slope. Let's talk more about why the USA might have this steep slope. 
 ```{r}
-newData <- aus_shark_data %>%
-  group_by(Country) %>%
-  summarize(numOfAttacks = n()) %>%
-  arrange(desc(numOfAttacks)) %>%
-  head()
-
-newData
-
-face <- aus_shark_data %>%
+countryThroughTime<- shark_data %>%
   group_by(Year, Country) %>%
-  filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "NEW ZEALAND" | Country == "BAHAMAS") %>%
-  summarize(attck = n()) %>%
-  ggplot(aes(x=Year, y=attck)) + geom_bar(stat = "identity", color = "black", fill = "navyblue")+ facet_grid(Country ~ ., scales="free") + geom_smooth(method = lm, color = "pink")
+  filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "PAPA NEW GUINEA" | Country == "BAHAMAS") %>%
+  summarize(attacks = n()) %>%
+  ggplot(aes(x=Year, y=attacks)) + geom_bar(stat = "identity", color = "black", fill = "navyblue")+ facet_grid(Country ~ .) + geom_smooth(method = lm, color = "pink") + labs(title = "Number of Attacks throughout Time in 6 different countries", x = "Year", y ="Total number of Attacks")
 
-
-f <- aus_shark_data %>%
+countryThroughTimeScaled<- shark_data %>%
   group_by(Year, Country) %>%
-  filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "NEW ZEALAND" | Country == "BAHAMAS") %>%
-  summarize(attack = n()) %>%
-  mutate(totalValue = (Country == "USA")*1946 + 1096 * (Country == "AUSTRALIA") + 497 *(Country == "SOUTH AFRICA") + 98 * (Country == "BRAZIL") + 
-           87 * (Country == "NEW ZEALAND") + 84 * (Country =="BAHAMAS")) %>%
-  ggplot(aes(x=Year, y=attack/totalValue)) + geom_bar(stat = "identity", color = "black", fill = "navyblue")+ facet_grid(Country ~ .) + geom_smooth(method = lm, color = "pink")
+  filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "PAPA NEW GUINEA" | Country == "BAHAMAS") %>%
+  summarize(attacks = n()) %>%
+  ggplot(aes(x=Year, y=attacks)) + geom_bar(stat = "identity", color = "black", fill = "navyblue")+ facet_grid(Country ~ ., scales="free") + geom_smooth(method = lm, color = "pink") + labs(title = "Number of Attacks throughout Time in 6 different countries", x = "Year", y ="Total number of Attacks")
 
-face # This is the graph we get after we just compare 
-f #This is the graph we get afteer dividing the year by the total number of attacks for a given country
+
+countryThroughTime
+countryThroughTimeScaled
 ```
   
-  
-  
-  
-4. Why is the USA so high? Mean # of attacks, SD 
-
-5. What month is the highest number of attacks in the USA? 
+    
+4. Why is the USA so high? Mean # of attacks, SD, Analyze how time affects the USA. 
 
 
+5. What is another potential cause in the large amount of attacks in the USA? Could it be based on the activity that was performed? 
+Which activity in the USA is the highest? 
+
+
+As we can tell from above, we notice that time DOES OR DOES NOT have an impact on the number of attacks that we have in the country. Is there another aspect that might have a strong correlation to causing a huge increase in the number of attacks? Will the type of activity that you are doing cause an effect on the number of attacks caused? Does activity have a positive correlation to the number of incidents? Seen below is the graph for the top 6 Activities that have caused an attack in the USA. The highest number of attacks is found when someone is surfing in the USA. Let's dive deeper into the surfing activity.
 ```{r}
-months <- aus_shark_data %>%
-  filter(Country == "USA") %>%
-  group_by(Month) %>%
-  summarize(numOfAttacks = n()) %>%
-  arrange(desc(Month)) %>%
-  ggplot(aes(x=Month, y=numOfAttacks)) + geom_bar(stat = "identity", color = "black", fill = "navyblue") 
 
-
-
-months
-```
-  
-
-6. Which activity in the USA is the highest? 
-```{r}
-testing_data <- aus_shark_data %>% 
-  group_by(Activity)
-
-test <- testing_data %>%
+activityAttacks <- shark_data %>%
+  group_by(Activity) %>%
   filter(Country =="USA") %>%
   summarize(num = n()) %>%
   arrange(desc(num)) %>%
   mutate(Activity=replace(Activity, is.na(Activity), "Unknown")) %>% 
   head() %>%
-  ggplot(aes(x = Activity, y = num)) + geom_bar(stat = "identity", fill = "red")
+  ggplot(aes(x = Activity, y = num)) + geom_bar(stat = "identity", fill = "red") + geom_text(aes(label=num), position=position_dodge(width=0.9), vjust=-0.25) + labs(title ="Number of Attacks for a Given Activity in the USA", x = "Activity", y = "Number of Attacks")
 
-test
+activityAttacks
 
 ```
   
   
 
-7. Is this activity a huge issue in other countries?
+6. Is this activity a huge issue in other countries?
 ```{r}
 
 dots <- aus_shark_data %>%
@@ -156,29 +134,53 @@ dots
   
   
   
-  Activity vs #Attacks
-  Ml: Predict number of attacks in a month
-  HT: Does month impact # of attacks
-
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
 
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+//Not sure what to do with this group of data just yet
+```{r}
+newData <- aus_shark_data %>%
+  group_by(Country) %>%
+  summarize(numOfAttacks = n()) %>%
+  arrange(desc(numOfAttacks)) %>%
+  head()
+
+newData
+
+f <- aus_shark_data %>%
+  group_by(Year, Country) %>%
+  filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "NEW ZEALAND" | Country == "BAHAMAS") %>%
+  summarize(attack = n()) %>%
+  mutate(totalValue = (Country == "USA")*1946 + 1096 * (Country == "AUSTRALIA") + 497 *(Country == "SOUTH AFRICA") + 98 * (Country == "BRAZIL") + 
+           87 * (Country == "NEW ZEALAND") + 84 * (Country =="BAHAMAS")) %>%
+  ggplot(aes(x=Year, y=attack/totalValue)) + geom_bar(stat = "identity", color = "black", fill = "navyblue")+ facet_grid(Country ~ .) + geom_smooth(method = lm, color = "pink")
+
+face # This is the graph we get after we just compare 
+f #This is the graph we get afteer dividing the year by the total number of attacks for a given country
+```
+
+ 
 ```{r}
 
 std_month <- aus_shark_data %>%
@@ -202,6 +204,20 @@ avg_month
 
 ```
   
+  
+  //This isnt too useful i dont think
+5. What month is the highest number of attacks in the USA?
+
+```{r}
+months <- aus_shark_data %>%
+  filter(Country == "USA") %>%
+  group_by(Month) %>%
+  summarize(numOfAttacks = n()) %>%
+  arrange(desc(Month)) %>%
+  ggplot(aes(x=Month, y=numOfAttacks)) + geom_bar(stat = "identity", color = "black", fill = "navyblue") 
+
+months
+```
   
   
   
