--- a/320.Rmd
+++ b/320.Rmd
@@ -19,6 +19,8 @@ library(tidyverse)
 library(ggplot2)
 
 original_data <- read.csv(file="/Users/trevorsmith/Desktop/attacks.csv", na.strings=c("","NA"))
+#original_data <- read.csv(file="C:\\Users\\nad78\\Documents\\Nadia\\2018-2019College\\CMSC320\\shark_attacks\\attacks.csv", na.strings=c("","NA"))
+
 
 original_data
 ```
@@ -96,7 +98,38 @@ countryThroughTimeScaled
   
     
 4. Why is the USA so high? Mean # of attacks, SD, Analyze how time affects the USA. 
+Let's see if there is a relationship between time and number of shark attacks for USA. We'll do that by fitting a linear regression model to it, and testing if the relationship is statistically significant.
 
+```{r}
+usa_data <- shark_data %>%
+  filter(Country == "USA") %>%
+  group_by(Year) %>%
+  summarize(attacks = n())
+
+usa_data
+
+usa_data_lm <- lm(attacks~Year, data=usa_data)
+broom::tidy(usa_data_lm)
+```
+
+We see that on average, number of shark attacks increases by 44.99% every year.
+We can also reject the null hypothesis of there being no relationship between number of attacks and years, since the p-value is much less than alpha of .05.
+
+Let's visualize the linear regression by plotting the residuals vs years
+
+```{r}
+usa_data_lm$Year=as.numeric(levels(usa_data_lm$Year))[usa_data_lm$Year]
+
+broom::augment(usa_data_lm) %>%
+  ggplot(aes(x=Year, y = .resid)) +
+    geom_point() +
+    labs(title = "Residuals of shark attacks over time",
+       x = "Year",
+       y = "Residual") +
+ scale_x_continuous(breaks=seq(1900, 2017, 9))
+
+```
+At seems that there is first a decreasing trend before 1970's which then becomes a steeply increasing trend thereafter. Let's look into what might be causing this trend.
 
 
 
@@ -119,10 +152,32 @@ activityAttacks
 
 ```
   
-  
+```{r}
+usa_data <- shark_data %>%
+  filter(Country == "USA") %>%
+  filter(Activity == "Surfing" | Activity == "Swimming" | Activity == "Unknown" | Activity == "Wading" | Activity == "Fishing" | Activity == "Standing") %>%
+  group_by(Year, Activity) %>%
+  summarize(attacks = n())
+
+usa_data
+
+usa_data_lm <- lm(attacks~Year, data=usa_data)
+
+usa_data_lm$Year=as.numeric(levels(usa_data_lm$Year))[usa_data_lm$Year]
+
+broom::augment(usa_data_lm) %>%
+  left_join(usa_data, by = c("attacks","Year")) %>%
+  ggplot(aes(x=Year, y = .resid, color = Activity)) +
+    geom_point() +
+    labs(title = "Residuals of shark attacks over time",
+       x = "Year",
+       y = "Residual") +
+ scale_x_continuous(breaks=seq(1900, 2017, 9))
+```
 
 6. Is this activity a huge issue in other countries?
 This graph shows us that throughout time, it seems as though swimming has been a consistent issue throughout time. We can tell that although Surfing is the largest issue in the USA, swimming has consistently been an issue throughout time. Even though the swimming has been consistent throughout the years, we can also tell from the bar graph below that surfing is still the number one activity that is done when someone is attacked. So this means that surfing must be an issue that has gotten more prevalent in recent years.
+
 ```{r}
 
 activityAttacksAllCountries <- shark_data %>%
@@ -132,18 +187,58 @@ activityAttacksAllCountries <- shark_data %>%
   mutate(Activity=replace(Activity, is.na(Activity), "Unknown")) %>% 
   head() %>%
   ggplot(aes(x = Activity, y = num)) + geom_bar(stat = "identity", fill = "red") + geom_text(aes(label=num), position=position_dodge(width=0.9), vjust=-0.25) + labs(title ="Number of Attacks for a Given Activity in the World", x = "Activity", y = "Number of Attacks")
-
-dots <- shark_data%>%
-  filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "NEW ZEALAND" | Country == "BAHAMAS") %>%
-  filter(Activity == "Surfing" | Activity == "Swimming" | Activity == "Unknown" | Activity == "Wading" | Activity == "Fishing" | Activity == "Standing") %>%
-  ggplot(aes(x=Year,y=Activity, color = Country)) + geom_point() + labs(title = "Attacks Throughout the Years based on Activity", x ="Years", y = "Activity when Attacked")
-
 activityAttacksAllCountries
-dots
 ```
-  We also notice while looking at the bar plot above that the total number of surfing attacks in the world is 952. This is very close to the number of surfing attacks in the USA which we found to be 559 attacks. Does this mean that surfing is as big of an issue in the world as it is in the USA?
-  
-  We begin to analyze the effect that surfing has in a given country. We can find this effect by finding the proportional relationship between the number of surfing attacks for each country. Found below is a plot of those proportions.
+
+ We also notice while looking at the bar plot above that the total number of surfing attacks in the world is 952. This is very close to the number of surfing attacks in the USA which we found to be 559 attacks. Does this mean that surfing is as big of an issue in the world as it is in the USA?
+
+```{r}
+main_countries_data <- shark_data %>%
+ filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "NEW ZEALAND" | Country == "BAHAMAS") %>%
+  filter(Activity == "Surfing" | Activity == "Swimming" | Activity == "Unknown" | Activity == "Wading" | Activity == "Fishing" | Activity == "Standing") %>%
+  group_by(Year, Activity) %>%
+  summarize(attacks = n())
+
+
+main_countries_data_lm <- lm(attacks~Year, data=main_countries_data)
+
+main_countries_data_lm$Year=as.numeric(levels(main_countries_data_lm$Year))[main_countries_data_lm$Year]
+
+broom::augment(main_countries_data_lm) %>%
+  left_join(main_countries_data, by = c("attacks","Year")) %>%
+  ggplot(aes(x=Year, y = .resid, color = Activity)) +
+    geom_point() +
+    labs(title = "Residuals of shark attacks over time",
+       x = "Year",
+       y = "Residual") +
+ scale_x_continuous(breaks=seq(1900, 2017, 9))
+```
+
+We see that the trend is very similar to what we have with the USA residuals, let's break it down by country to see how each country contributes.
+
+```{r}
+main_countries_data <- shark_data %>%
+ filter(Country == "USA" | Country == "AUSTRALIA" | Country == "SOUTH AFRICA" | Country == "BRAZIL" | Country == "NEW ZEALAND" | Country == "BAHAMAS") %>%
+  filter(Activity == "Surfing" | Activity == "Swimming" | Activity == "Unknown" | Activity == "Wading" | Activity == "Fishing" | Activity == "Standing") %>%
+  group_by(Year, Activity, Country) %>%
+  summarize(attacks = n())
+
+main_countries_data
+
+main_countries_data_lm <- lm(attacks~Year, data=main_countries_data)
+
+main_countries_data_lm$Year=as.numeric(levels(main_countries_data_lm$Year))[main_countries_data_lm$Year]
+
+broom::augment(main_countries_data_lm) %>%
+  left_join(main_countries_data, by = c("attacks","Year")) %>%
+  ggplot(aes(x=Year, y = .resid, color = Activity)) +
+    geom_point() +
+    labs(title = "Residuals of shark attacks over time",
+       x = "Year",
+       y = "Residual") +
+  scale_x_continuous(breaks=seq(1900, 2017, 50)) +
+  facet_grid( . ~ Country)
+```
 
   
   
